<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:id="@+id/linearLayout">

  <Button
    android:id="@+id/track_button"
    android:layout_width="180dp"
    android:layout_height="54dp"
    android:layout_marginBottom="64dp"
    android:background="@color/res_green"
    android:clickable="true"
    android:focusable="true"
    android:text="@string/plan_track_button"
    android:textColor="@color/res_white"
    android:textSize="20sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@+id/notes_edittext"/>

  <TextView
    android:id="@+id/center_day_textview"
    android:layout_width="match_parent"
    android:layout_height="84dp"
    android:gravity="center"
    android:text="@string/plan_center_day_textview"
    android:textColor="@color/res_black"
    android:textSize="40sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/month_progress_textview"
    />

  <Spinner
    android:id="@+id/spinner"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:background="@color/res_green"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/center_day_textview"
    app:layout_constraintVertical_chainStyle="spread"/>

  <TextView
    android:id="@+id/month_progress_textview"
    android:layout_width="match_parent"
    android:layout_height="35dp"
    android:background="@color/res_white"
    android:gravity="center"
    android:text="@string/plan_month_progress_textview"
    android:textSize="26sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/hscroller"/>

  <ImageView
    android:id="@+id/resBackground"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="150dp"
    android:layout_marginBottom="160dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:alpha=".33"
    android:contentDescription="@string/activity_res_logo"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/hscroller"
    app:srcCompat="@drawable/pic"/>

  <EditText
    android:id="@+id/notes_edittext"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:padding="15dp"
    android:autofillHints="@string/plan_notes_edittext"
    android:background="@color/res_white_transparent"
    android:ems="10"
    android:hint="@string/plan_notes_edittext"
    android:inputType="textCapSentences|textMultiLine"
    android:maxLength="2000"
    android:maxLines="15"
    android:scrollHorizontally="false"
    android:textColor="@color/res_black"
    app:layout_constraintBottom_toTopOf="@+id/track_button"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/spinner"
    tools:ignore="UnusedAttribute"/>

  <android.support.design.widget.BottomNavigationView
    android:id="@+id/core_navigation"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:background="@color/res_green"
    app:elevation="0dp"
    app:itemBackground="@color/res_green"
    app:itemHorizontalTranslationEnabled="false"
    app:itemIconTint="@android:color/black"
    app:itemTextColor="@android:color/black"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:menu="@menu/core_navigation"/>

  <HorizontalScrollView
    android:id="@+id/hscroller"
    android:layout_width="match_parent"
    android:layout_height="135dp"
    android:background="@color/res_white"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <LinearLayout
      android:id="@+id/detailsLayout"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:orientation="horizontal"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <LinearLayout
          android:id="@+id/vertical_layout_1"
          android:layout_width="wrap_content"
          android:layout_height="130dp"
          android:layout_gravity="center_horizontal"
          android:gravity="bottom|center_horizontal"
          android:orientation="vertical"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent">

          <TextView
            android:id="@+id/day_of_week_7"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="23sp"/>

          <TextView
            android:id="@+id/textview_day_7"
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:background="@color/res_green_transparent"
            android:clickable="true"
            android:focusable="true"
            android:textAlignment="center"
            android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
          android:id="@+id/vertical_layout_2"
          android:layout_width="wrap_content"
          android:layout_height="130dp"
          android:layout_marginStart="25dp"
          android:layout_gravity="center_horizontal"
          android:gravity="bottom|center_horizontal"
          android:orientation="vertical"
          app:layout_constraintStart_toEndOf="@id/vertical_layout_1"
          app:layout_constraintTop_toTopOf="parent">

          <TextView
            android:id="@+id/day_of_week_6"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="23sp"/>

          <TextView
            android:id="@+id/textview_day_6"
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:background="@color/res_green_transparent"
            android:clickable="true"
            android:focusable="true"
            android:textAlignment="center"
            android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
          android:id="@+id/vertical_layout_3"
          android:layout_width="wrap_content"
          android:layout_height="130dp"
          android:layout_marginStart="25dp"
          android:layout_gravity="center_horizontal"
          android:gravity="bottom|center_horizontal"
          android:orientation="vertical"
          app:layout_constraintStart_toEndOf="@id/vertical_layout_2"
          app:layout_constraintTop_toTopOf="parent">

          <TextView
            android:id="@+id/day_of_week_5"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="23sp"/>

          <TextView
            android:id="@+id/textview_day_5"
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:background="@color/res_green_transparent"
            android:clickable="true"
            android:focusable="true"
            android:textAlignment="center"
            android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
          android:id="@+id/vertical_layout_4"
          android:layout_width="wrap_content"
          android:layout_height="130dp"
          android:layout_marginStart="25dp"
          android:layout_gravity="center_horizontal"
          android:gravity="bottom|center_horizontal"
          android:orientation="vertical"
          app:layout_constraintStart_toEndOf="@id/vertical_layout_3"
          app:layout_constraintTop_toTopOf="parent">

          <TextView
            android:id="@+id/day_of_week_4"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="23sp"/>

          <TextView
            android:id="@+id/textview_day_4"
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:background="@color/res_green_transparent"
            android:clickable="true"
            android:focusable="true"
            android:textAlignment="center"
            android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
          android:id="@+id/vertical_layout_5"
          android:layout_width="wrap_content"
          android:layout_height="130dp"
          android:layout_marginStart="25dp"
          android:layout_gravity="center_horizontal"
          android:gravity="bottom|center_horizontal"
          android:orientation="vertical"
          app:layout_constraintStart_toEndOf="@id/vertical_layout_4"
          app:layout_constraintTop_toTopOf="parent">

          <TextView
            android:id="@+id/day_of_week_3"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="23sp"/>

          <TextView
            android:id="@+id/textview_day_3"
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:background="@color/res_green_transparent"
            android:clickable="true"
            android:focusable="true"
            android:textAlignment="center"
            android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
          android:id="@+id/vertical_layout_6"
          android:layout_width="wrap_content"
          android:layout_height="130dp"
          android:layout_marginStart="25dp"
          android:layout_gravity="center_horizontal"
          android:gravity="bottom|center_horizontal"
          android:orientation="vertical"
          app:layout_constraintStart_toEndOf="@id/vertical_layout_5"
          app:layout_constraintTop_toTopOf="parent">

          <TextView
            android:id="@+id/day_of_week_2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="23sp"/>

          <TextView
            android:id="@+id/textview_day_2"
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:background="@color/res_green_transparent"
            android:clickable="true"
            android:focusable="true"
            android:textAlignment="center"
            android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
          android:id="@+id/vertical_layout_7"
          android:layout_width="wrap_content"
          android:layout_height="130dp"
          android:layout_marginStart="25dp"
          android:layout_gravity="center_horizontal"
          android:gravity="bottom|center_horizontal"
          android:orientation="vertical"
          app:layout_constraintStart_toEndOf="@id/vertical_layout_6"
          app:layout_constraintTop_toTopOf="parent">

          <TextView
            android:id="@+id/day_of_week_1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="23sp"/>


          <TextView
            android:id="@+id/textview_day_1"
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:background="@color/res_green_transparent"
            android:clickable="true"
            android:focusable="true"
            android:textAlignment="center"
            android:textSize="15sp"/>
        </LinearLayout>
      </android.support.constraint.ConstraintLayout>

    </LinearLayout>

  </HorizontalScrollView>

  <ImageButton
    android:id="@+id/imageButton"
    android:layout_width="18dp"
    android:layout_height="100dp"
    android:layout_marginTop="30dp"
    android:contentDescription="@string/plan_previous_week"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="?attr/homeAsUpIndicator"/>

  <ImageButton
    android:id="@+id/imageButton2"
    android:layout_width="18dp"
    android:layout_height="100dp"
    android:layout_marginTop="28dp"
    android:contentDescription="@string/plan_next_week"
    android:rotation="180"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="?attr/homeAsUpIndicator"/>
</android.support.constraint.ConstraintLayout>



